# work-belongings

./: .gitignore
create/vllm-delivery-template/: README.md
create/vllm-delivery-template/benchmark/: load_test.py
create/vllm-delivery-template/benchmark/config/: default.yaml
create/vllm-delivery-template/client/: smoke_test.py
create/vllm-delivery-template/docs/: configuration.md  ops_runbook.md  quickstart.md
create/vllm-delivery-template/observability/: docker-compose.yml
create/vllm-delivery-template/scripts/: start_monitoring.sh
create/vllm-delivery-template/serving/: config.yaml  health.py
create/vllm-delivery-template/tests/: __init__.py  test_smoke.py
feishu_bot/: 周计划_20260201-20260701.xlsx
feishu_bot/feishu-study-bot/: .env.example  Makefile  README.md  app.py  deploy.sh  docker-compose.yml  pyproject.toml
feishu_bot/feishu-study-bot/.github/workflows/: deploy.yml
feishu_bot/feishu-study-bot/bot/: handlers.py
feishu_bot/feishu-study-bot/config/schemas/: weekly_plan.json
feishu_bot/feishu-study-bot/scripts/: import_plan.py
feishu_bot/feishu-study-bot/services/: webhook_scheduler.py
feishu_bot/feishu-study-bot/static/: card-preview.html
feishu_bot/feishu-study-bot/tests/: test_services.py
feishu_bot/feishu-study-bot/utils/: date_utils.py  feishu_client.py  websocket_client.py
plan/: ssh登录.txt  周计划_20260201-20260701.xlsx
tools/feishu-study-bot/: .gitignore  Dockerfile  feishu-bot.service  webhook_bot.py
tools/feishu-study-bot/bot/: handlers.py
tools/feishu-study-bot/cards/: templates.py
tools/feishu-study-bot/config/: settings.py
tools/feishu-study-bot/docs/: DEPLOYMENT_CHECKLIST.md
tools/feishu-study-bot/models/: database.py
tools/feishu-study-bot/scripts/: dev.sh  start.sh
tools/feishu-study-bot/services/: checkin_service.py  plan_service.py  report_service.py  scheduler.py
tools/feishu-study-bot/utils/: webhook_client.py
vllm-delivery-template/: .gitignore  pyproject.toml
vllm-delivery-template/benchmark/metrics/: collector.py
vllm-delivery-template/benchmark/reports/: generator.py
vllm-delivery-template/client/: __init__.py  smoke_test.py
vllm-delivery-template/docs/: benchmarking.md  ops_runbook.md  quickstart.md
vllm-delivery-template/observability/: README.md
vllm-delivery-template/observability/grafana/provisioning/dashboards/: dashboard.yml
vllm-delivery-template/scripts/: deploy_remote.sh  dev.sh  run_benchmark.sh  run_smoke_test.sh
vllm-delivery-template/serving/: __init__.py  config.yaml  launch.py
(+4 files in other folders)
